--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,19 @@
 [tool.poetry]
 name = "pangea"
-version = "0.1.0"
+version = "0.2.1"
 description = "Pangea API SDK"
 authors = ["Glenn Gallien <glenn.gallien@pangea.cloud>"]
-license = ""
+license = "MIT"
 readme = "README.md"
 homepage = ""
 repository = ""
 keywords = ["Pangea", "SDK", "Audit"]
 classifiers = [
-    "Topic :: Software Development :: API",
-    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Software Development",
+    "Topic :: Software Development :: Libraries",
+]
+packages = [
+    { include = "pangea" }
 ]
 
 [tool.poetry.dependencies]
