--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,28 +1,34 @@
 image: python:3.7
 
 stages:
-  - test
   - lint
+  - unit_tests
+  - integration_tests
   - build
 
 before_script:
   - pip install poetry
   - poetry install
 
-testing:
-  stage: test
-  script:
-    - poetry run python -m unittest -v
-
 py_lint:
   stage: lint
   script:
     - poetry run black .
 
+testing:
+  stage: unit_tests
+  script:
+    - poetry run python -m unittest -v
+
+integration:
+  stage: initegration_tests
+  script:
+    - echo "Integration tests..."
+
 building:
   stage: build
   only:
-    - main
+    - tags
   script:
     - poetry build
     - poetry publish --username __token__ --password $PYPI_SDK_TOKEN
