--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "python-pangea"
-version = "0.2.9"
+version = "0.2.10"
 description = "Pangea API SDK"
 authors = ["Glenn Gallien <glenn.gallien@pangea.cloud>"]
 license = "MIT"
@@ -19,7 +19,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.7.2"
 requests = "^2.27.1"
-cryptography = "^37.0.4"
+cryptography = "37.0.2"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.941"
