--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ py_lint:
 testing:
   stage: unit_tests
   script:
-    - poetry run python -m unittest tests.unit
+    - poetry run python -m unittest tests
 
 integration:
   stage: integration_tests
