--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ packages = [
 python = "^3.7.2"
 requests = "^2.27.1"
 cryptography = "37.0.2"
+schema = "^0.7.5"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.941"
