--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ cryptography = "37.0.2"
 schema = "^0.7.5"
 python-dateutil = "^2.8.2"
 alive-progress = "^2.4.1"
+pydantic = "^1.10.2"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.941"
