--- a/packages/pangea-sdk/pyproject.toml
+++ b/packages/pangea-sdk/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "python-pangea"
+name = "pangea-sdk"
 version = "0.4.0"
 description = "Pangea API SDK"
 authors = ["Glenn Gallien <glenn.gallien@pangea.cloud>"]
@@ -24,6 +24,7 @@ schema = "^0.7.5"
 python-dateutil = "^2.8.2"
 alive-progress = "^2.4.1"
 pydantic = "^1.10.2"
+pytest = "^7.2.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.941"
