--- a/packages/pangea-sdk/pyproject.toml
+++ b/packages/pangea-sdk/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "python-pangea"
+name = "pangea-sdk"
 version = "0.4.0"
 description = "Pangea API SDK"
 authors = ["Glenn Gallien <glenn.gallien@pangea.cloud>"]
