--- a/packages/pangea-sdk/pyproject.toml
+++ b/packages/pangea-sdk/pyproject.toml
@@ -24,6 +24,7 @@ schema = "^0.7.5"
 python-dateutil = "^2.8.2"
 alive-progress = "^2.4.1"
 pydantic = "^1.10.2"
+deprecated = "^1.2.13"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.941"
