--- a/examples/intel/pyproject.toml
+++ b/examples/intel/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
-name = "vault-examples"
+name = "intel-examples"
 version = "1.0.0"
 description = "This is a set of examples about how to use python SDK to communicate with Vault service"
 authors = ["H. Andres Tournour <andres.tournour@pangea.cloud>"]
 readme = "README.md"
-packages = [{include = "vault_examples"}]
+packages = [{include = "intel_examples"}]
 
 [tool.poetry.dependencies]
 python = "^3.7.2"
