--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ packages/pangea-sdk/logs/
 python_sdk.json
 pangea_sdk_logs.json*
 packages/pangea-sdk/tests/testdata/dump.json
+
+# examples poetry locks
+examples/*/poetry.lock
