--- a/examples/intel/pyproject.toml
+++ b/examples/intel/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "intel-examples"
-version = "2.0.0"
+version = "2.1.0"
 description = "This is a set of examples about how to use python SDK to communicate with Vault service"
 authors = ["H. Andres Tournour <andres.tournour@pangea.cloud>"]
 readme = "README.md"
@@ -8,7 +8,7 @@ packages = [{include = "intel_examples"}]
 
 [tool.poetry.dependencies]
 python = "^3.7.2"
-pangea-sdk = "^2.0.0"
+pangea-sdk = "2.1.0"
 
 [build-system]
 requires = ["poetry-core"]
