--- a/packages/pangea-sdk/pyproject.toml
+++ b/packages/pangea-sdk/pyproject.toml
@@ -26,6 +26,8 @@ alive-progress = "^2.4.1"
 pydantic = "^1.10.2"
 pytest = "^7.2.0"
 deprecated = "^1.2.13"
+aiohttp = "^3.8.5"
+asyncio = "^3.4.3"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.941"
