--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -47,6 +47,12 @@ integration:
   script:
     - poetry run python -m unittest tests.integration
 
+asyncio-integration:
+  extends: .pangea-sdk-base
+  stage: asyncio_tests
+  script:
+    - poetry run python -m unittest tests.integration.asyncio
+
 building:
   extends: .pangea-sdk-publish
   stage: build
