--- a/packages/pangea-sdk/pyproject.toml
+++ b/packages/pangea-sdk/pyproject.toml
@@ -5,8 +5,8 @@ description = "Pangea API SDK"
 authors = ["Glenn Gallien <glenn.gallien@pangea.cloud>"]
 license = "MIT"
 readme = "README.md"
-homepage = ""
-repository = ""
+homepage = "https://pangea.cloud/docs/sdk/python/"
+repository = "https://github.com/pangeacyber/pangea-python/tree/main/packages/pangea-sdk"
 keywords = ["Pangea", "SDK", "Audit"]
 classifiers = [
     "Topic :: Software Development",
