--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@ packages/pangea-sdk/tests/testdata/dump.json
 # examples poetry locks
 examples/*/poetry.lock
 .DS_Store
+download_file
+payload
+*.tar
+*.zip
