--- a/packages/pangea-sdk/pyproject.toml
+++ b/packages/pangea-sdk/pyproject.toml
@@ -19,7 +19,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.7.2"
 requests = "^2.31.0"
-cryptography = "41.0.5"
+cryptography = "^41.0.6"
 schema = "^0.7.5"
 python-dateutil = "^2.8.2"
 alive-progress = "^2.4.1"
