--- a/examples/vault/pyproject.toml
+++ b/examples/vault/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "vault_examples"}]
 
 [tool.poetry.dependencies]
 python = "^3.7.2"
-pangea-sdk = "^3.5.0"
+pangea-sdk = { path = "../../packages/pangea-sdk", develop = true }
 
 [build-system]
 requires = ["poetry-core"]
