add examples and update LinkTypes

--- a/examples/store/pyproject.toml
+++ b/examples/store/pyproject.toml
@@ -1,14 +1,14 @@
 [tool.poetry]
 name = "redact-examples"
 version = "2.0.0"
-description = "This is a set of examples about how to use python SDK to communicate with Redact service"
+description = "This is a set of examples about how to use python SDK to communicate with Store service"
 authors = ["H. Andres Tournour <andres.tournour@pangea.cloud>"]
 readme = "README.md"
-packages = [{include = "redact_examples"}]
+packages = [{include = "store_examples"}]
 
 [tool.poetry.dependencies]
 python = "^3.7.2"
-pangea-sdk = "^3.5.0"
+pangea-sdk =  { path = "../../packages/pangea-sdk/", develop = true }
 
 [build-system]
 requires = ["poetry-core"]
