--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,10 @@ default:
 stages:
   - lint
   - unit_tests
-  - integration_tests
-  - asyncio_tests
+  - integration_tests_aws
+  - asyncio_tests_aws
+  - integration_tests_gcp
+  - asyncio_tests_gcp
   - build
 
 include:
