test vault against LVE

--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -11,7 +11,7 @@
     SERVICE_FILE_INTEL_ENV: LVE
     SERVICE_USER_INTEL_ENV: LVE
     SERVICE_REDACT_ENV: LVE
-    SERVICE_VAULT_ENV: DEV
+    SERVICE_VAULT_ENV: LVE
 
   before_script:
     - echo $ENV
