Re-enable django ci - Update staging_tests

--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -194,6 +194,9 @@ staging-tests:
     ENV: STG
   script:
     - poetry run python -m unittest tests.integration
+  rules:
+  # Just to avoid running this every time
+    - if: $CI_COMMIT_BRANCH == "staging"
 
 # asyncio-aws:
 #   extends: .pangea-sdk-base
