--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,9 +7,9 @@ stages:
   - lint
   - unit_tests
   - integration_tests
-  # - staging_tests
+  - staging_tests
   - build
 
 include:
   - /packages/pangea-sdk/.sdk-ci.yml
-  # - /packages/pangea-django/.django-ci.yml
+  - /packages/pangea-django/.django-ci.yml
