--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,9 +7,8 @@ stages:
   - lint
   - unit_tests
   - integration_tests
-  - staging_tests
-  - build
   - examples
+  - publish
 
 include:
   - /packages/pangea-sdk/.sdk-ci.yml
