--- a/packages/pangea-django/.django-ci.yml
+++ b/packages/pangea-django/.django-ci.yml
@@ -12,32 +12,8 @@ django_lint:
   script:
     - poetry run black .
 
-# generate_docs:
-# extends: .pangea-sdk-base
-# stage: lint
-# allow_failure: true
-# script:
-# - poetry run python parse_module.py > python_sdk.json
-# artifacts:
-# expire_in: 1 month
-# expose_as: python_sdk
-# paths: ['packages/pangea-sdk/python_sdk.json']
-# when: on_success
-
-# testing:
-# extends: .pangea-sdk-base
-# stage: unit_tests
-# script:
-# - poetry run python -m unittest tests.unit
-
-# integration:
-# extends: .pangea-sdk-base
-# stage: integration_tests
-# script:
-# - poetry run python -m unittest tests.integration
-
-building:
-  stage: build
+pangea-django-publish:
+  stage: publish
   extends: .pangea-django-base
   script:
     - poetry build
