--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -22,8 +22,9 @@
     SERVICE_VAULT_ENV: LVE
 
   before_script:
-    - echo $ENV
-    - echo $CLOUD
+    - echo ${ENV}
+    - echo ${CLOUD}
+    - echo ${TEST}
   # Update environment variables
   # Domain
     - export PANGEA_INTEGRATION_DOMAIN_${ENV}="$(eval echo \$PANGEA_INTEGRATION_DOMAIN_${ENV}_${CLOUD})"
@@ -44,38 +45,29 @@
   parallel:
     matrix:
       - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_AUDIT_ENV}
-        TEST: test_audit
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_AUTHN_ENV}
-        TEST: test_authn
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_EMBARGO_ENV}
-        TEST: test_embargo
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_DOMAIN_INTEL_ENV}
-        TEST: test_intel.TestDomainIntel
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_IP_INTEL_ENV}
-        TEST: test_intel.TestIPIntel
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_URL_INTEL_ENV}
-        TEST: test_intel.TestURLIntel
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_USER_INTEL_ENV}
-        TEST: test_intel.TestUserIntel
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_FILE_INTEL_ENV}
-        TEST: test_intel.TestFileIntel
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_FILE_SCAN_ENV}
-        TEST: test_file_scan
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_REDACT_ENV}
-        TEST: test_redact
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_VAULT_ENV}
-        TEST: test_vault
+        TESTS:
+        - ENV: ${SERVICE_AUDIT_ENV}
+          TEST: test_audit
+        - ENV: ${SERVICE_AUTHN_ENV}
+          TEST: test_authn
+        - ENV: ${SERVICE_EMBARGO_ENV}
+          TEST: test_embargo
+        - ENV: ${SERVICE_DOMAIN_INTEL_ENV}
+          TEST: test_intel.TestDomainIntel
+        - ENV: ${SERVICE_IP_INTEL_ENV}
+          TEST: test_intel.TestIPIntel
+        - ENV: ${SERVICE_URL_INTEL_ENV}
+          TEST: test_intel.TestURLIntel
+        - ENV: ${SERVICE_USER_INTEL_ENV}
+          TEST: test_intel.TestUserIntel
+        - ENV: ${SERVICE_FILE_INTEL_ENV}
+          TEST: test_intel.TestFileIntel
+        - ENV: ${SERVICE_FILE_SCAN_ENV}
+          TEST: test_file_scan
+        - ENV: ${SERVICE_REDACT_ENV}
+          TEST: test_redact
+        - ENV: ${SERVICE_VAULT_ENV}
+          TEST: test_vault
   rules:
     - if: $CI_PIPELINE_SOURCE == "push"
     - if: '$CLOUD == "GCP" && $TEST == "test_file_scan"'
